snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha256
9cfca767b63ebe9e60d410ed63e46a4e9bfb45812ac853d58d1554992e55ecb0